first initial refactor from mvc project.

--- a/src/Framework/Configuration/Propeller.Mvc.Configuration.csproj
+++ b/src/Framework/Configuration/Propeller.Mvc.Configuration.csproj
@@ -9,12 +9,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{501C7C4A-AF17-4282-9BF9-87B19AB9CA54}</ProjectGuid>
+    <ProjectGuid>{3197F30B-2FD5-4369-9245-993F7D8136FC}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Demo</RootNamespace>
-    <AssemblyName>Demo</AssemblyName>
+    <RootNamespace>Propeller.Mvc.Configuration</RootNamespace>
+    <AssemblyName>Propeller.Mvc.Configuration</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -160,14 +160,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="Views\Layouts\PropellerDemoLayout.cshtml" />
-    <None Include="Properties\PublishProfiles\LocalWeb.pubxml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping\ConfigurationItem.cs" />
+    <Compile Include="Mapping\ConfigurationMap.cs" />
+    <Compile Include="Mapping\ConfigurationMethods.cs" />
+    <Compile Include="Processing\MappingAssemblyExcludeService.cs" />
+    <Compile Include="Utility\GetPropertyNameFromExpressionService.cs" />
+    <Compile Include="Processing\MappingProcessor.cs" />
+    <Compile Include="Processing\MappingTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Compile Include="Utility\PropertyIdResolver.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">14.0</VisualStudioVersion>
@@ -182,9 +185,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>5688</DevelopmentServerPort>
+          <DevelopmentServerPort>5655</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:5688/</IISUrl>
+          <IISUrl>http://localhost:5655/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
