--- a/src/Framework/Configuration/App_Config/Include/Propeller.Mvc.Core/PropellerMapping.config
+++ b/src/Framework/Configuration/App_Config/Include/Propeller.Mvc.Core/PropellerMapping.config
@@ -2,7 +2,7 @@
   <sitecore>
     <pipelines>
       <initialize>
-        <processor type="ViewModelResolver.Infrastructure.MappedViewModelProcessor, ViewModelResolver" />
+        <processor type="Propeller.Mvc.Core.Processing.MappingProcessor, Propeller.Mvc.Core" />
       </initialize>
     </pipelines>
     <viewModelResolver>
