--- a/src/Framework/ModelResolver/Propeller.Mvc.ModelResolver.csproj
+++ b/src/Framework/ModelResolver/Propeller.Mvc.ModelResolver.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Include\ModelResolver\ModelResolver.config" />
+    <Content Include="App_Config\Include\Propeller.Mvc.ModelResolver\ModelResolver.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">14.0</VisualStudioVersion>
