--- a/src/Framework/Configuration/Propeller.Mvc.Core.csproj
+++ b/src/Framework/Configuration/Propeller.Mvc.Core.csproj
@@ -173,6 +173,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\PropertyIdResolver.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Config\Include\Propeller.Mvc.Core\PropellerMapping.config" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">14.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
