--- a/src/Domain/Demo/App_Config/Include/Unicorn/Unicorn.Configs.propeller.config
+++ b/src/Domain/Demo/App_Config/Include/Unicorn/Unicorn.Configs.propeller.config
@@ -50,6 +50,7 @@
 						<include name="Layouts" database="master" path="/sitecore/layout/Layouts/Propeller" />
 						<include name="Templates" database="master" path="/sitecore/templates/Components" />
 						<include name="Content" database="master" path="/sitecore/content/Home/PropellerDemo" />
+            <include name="Media" database="master" path="/sitecore/media library/Images/PropellerDemo" />
 
             
             <include database="master" path="/sitecore/system/Languages" />
