--- a/Data/Unicorn/propeller.demo/Layouts/Propeller/PropellerDemoLayout.yml
+++ b/Data/Unicorn/propeller.demo/Layouts/Propeller/PropellerDemoLayout.yml
@@ -8,3 +8,15 @@ SharedFields:
 - ID: "a036b2bc-ba04-44f6-a75f-bae6cd242abf"
   Hint: Path
   Value: /Views/Layouts/PropellerDemoLayout.cshtml
+Languages:
+- Language: en
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
+      Hint: __Created
+      Value: 20161105T231803Z
+    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
+      Hint: __Created by
+      Value: |
+        sitecore\admin
