--- a/src/Domain/Demo/App_Config/Include/Unicorn/Unicorn.Configs.propeller.config
+++ b/src/Domain/Demo/App_Config/Include/Unicorn/Unicorn.Configs.propeller.config
@@ -49,10 +49,10 @@
 						-->
 						<include name="Layouts" database="master" path="/sitecore/layout/Layouts/Propeller" />
 						<include name="Templates" database="master" path="/sitecore/templates/Components" />
-						<include name="Content" database="master" path="/sitecore/content/Home/PropellerDemo" />
+            <include name="Renderings" database="master" path="/sitecore/layout/Renderings/Components" />
+            <include name="Content" database="master" path="/sitecore/content/Home/PropellerDemo" />
             <include name="Media" database="master" path="/sitecore/media library/Images/PropellerDemo" />
 
-            
             <include database="master" path="/sitecore/system/Languages" />
 						<include database="master" path="/sitecore/system/Tasks">
 							<exclude path="Schedules" />
