--- a/src/Domain/Demo/Demo.csproj
+++ b/src/Domain/Demo/Demo.csproj
@@ -183,7 +183,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="styles\bootstrap.min.css" />
     <Content Include="Views\Layouts\PropellerDemoLayout.cshtml" />
