--- a/src/Domain/Demo/packages.config
+++ b/src/Domain/Demo/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  
   <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net46" />
+  <package id="MicroCHAP" version="1.2.2.2" targetFramework="net46" />
   <package id="Rainbow" version="1.4.0" targetFramework="net46" />
   <package id="Rainbow.Core" version="1.4.0" targetFramework="net46" />
   <package id="Rainbow.Storage.Sc" version="1.4.0" targetFramework="net46" />
