Added raw value automation for referenced/complex objects.

--- a/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
+++ b/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\GeneralLink.cs" />
+    <Compile Include="Adapters\IFieldAdapter.cs" />
     <Compile Include="Adapters\Image.cs" />
     <Compile Include="IPropellerModel.cs" />
     <Compile Include="PropellerModel.cs" />
