--- a/Data/Unicorn/propeller.demo/Templates/Components/Domain/Data/__Character/Character/IsActive.yml
+++ b/Data/Unicorn/propeller.demo/Templates/Components/Domain/Data/__Character/Character/IsActive.yml
@@ -1,16 +1,16 @@
 ﻿---
-ID: "9304e02d-4f20-4361-aec4-e8bb10c7bc89"
-Parent: "f79dce98-5591-4544-b1d2-3494916ae63f"
+ID: "cd46f2b2-507a-47b7-9e46-3cdac9d2cd73"
+Parent: "47a30e64-1d54-4b12-961e-043cde19ab9b"
 Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Components/Domain/Data/__Vehicle/TechnicalSpecifications/Shielding
+Path: /sitecore/templates/Components/Domain/Data/__Character/Character/IsActive
 DB: master
 SharedFields:
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
   Hint: Type
-  Value: "Single-Line Text"
+  Value: Checkbox
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
-  Value: 500
+  Value: 900
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161021T113640Z
+      Value: 20161221T210718Z
