--- a/Data/Unicorn/propeller.demo/Templates/Components/Domain/Data/__Vehicle/ProductionInformation/EnteredServiceDate.yml
+++ b/Data/Unicorn/propeller.demo/Templates/Components/Domain/Data/__Vehicle/ProductionInformation/EnteredServiceDate.yml
@@ -1,16 +1,16 @@
 ﻿---
-ID: "9304e02d-4f20-4361-aec4-e8bb10c7bc89"
-Parent: "f79dce98-5591-4544-b1d2-3494916ae63f"
+ID: "ca2b640a-a591-46a3-a437-9a07adc7f684"
+Parent: "fc98ff9b-3c19-4c04-a6da-61defd0622d4"
 Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Components/Domain/Data/__Vehicle/TechnicalSpecifications/Shielding
+Path: /sitecore/templates/Components/Domain/Data/__Vehicle/ProductionInformation/EnteredServiceDate
 DB: master
 SharedFields:
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
   Hint: Type
-  Value: "Single-Line Text"
+  Value: Datetime
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
-  Value: 500
+  Value: 300
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161021T113640Z
+      Value: 20161217T212043Z
