--- a/src/Framework/PropellerMvcCore/Propeller.Mvc.Core.csproj
+++ b/src/Framework/PropellerMvcCore/Propeller.Mvc.Core.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Processing\MappingTable.cs" />
     <Compile Include="PropellerEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\EnvironmentSetttings.cs" />
     <Compile Include="Utility\GetPropertyNameFromExpressionService.cs" />
     <Compile Include="Utility\PropertyIdResolver.cs" />
   </ItemGroup>
