--- a/src/Test/PresentationTest/App.config
+++ b/src/Test/PresentationTest/App.config
@@ -8,7 +8,7 @@
   </appSettings>
   <sitecore>
     <settings>
-      <setting name="LicenseFile" value="d:\Home\James\Projects\Private\propeller.mvc\src\Test\PresentationTest\license.xml" />
+      <setting name="LicenseFile" value="$(SolutionDir)\license.xml" />
     </settings>
     <!-- DATABASE TYPE
          For Sitecore versions prior to 8.2 should be 'Sitecore.Data.Database, Sitecore.Kernel'.
