--- a/src/Domain/Demo/Demo.csproj
+++ b/src/Domain/Demo/Demo.csproj
@@ -239,6 +239,10 @@
       <Project>{c80c85b3-f9b6-49db-99a7-31f70fbaea85}</Project>
       <Name>Propeller.Mvc.Presentation</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Framework\PropellerTcpLogger\Propeller.Log.csproj">
+      <Project>{f3256da0-cb19-49d7-9c89-97a8cf65ecf2}</Project>
+      <Name>Propeller.Log</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">14.0</VisualStudioVersion>
