--- a/src/Framework/PropellerTcpLogger/Propeller.Log.csproj
+++ b/src/Framework/PropellerTcpLogger/Propeller.Log.csproj
@@ -49,6 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App_Config\Include\Propeller.Log\PropellerLog.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
