--- a/src/Domain/Demo/App_Config/Include/Unicorn/Unicorn.config
+++ b/src/Domain/Demo/App_Config/Include/Unicorn/Unicorn.config
@@ -68,7 +68,7 @@
 						is recommended if using transparent syncing for performance. It's not really
 						needed otherwise.
 					-->
-        <targetDataStore physicalRootPath="d:\Home\James\Projects\Private\propeller.mvc\Data\Unicorn\$(configurationName)" useDataCache="false" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" singleInstance="true"/>
+        <targetDataStore physicalRootPath="f:\Home\James\Projects\Private\propeller.mvc\Data\Unicorn\$(configurationName)" useDataCache="false" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" singleInstance="true"/>
 
 				<serializationFormatter type="Rainbow.Storage.Yaml.YamlSerializationFormatter, Rainbow.Storage.Yaml" singleInstance="true">
 					<fieldFormatter type="Rainbow.Formatting.FieldFormatters.MultilistFormatter, Rainbow" />
