renamed log projects

--- a/src/Framework/PropellerMvcModelResolver/Propeller.Mvc.ModelResolver.csproj
+++ b/src/Framework/PropellerMvcModelResolver/Propeller.Mvc.ModelResolver.csproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
+    <Compile Include="LogPropInitializer.cs" />
     <Compile Include="Processing\ModelResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
