--- a/src/Framework/PropellerLogger/App_Config/Include/Propeller.Logger/propellerlog.config
+++ b/src/Framework/PropellerLogger/App_Config/Include/Propeller.Logger/propellerlog.config
@@ -1,16 +1,21 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <log4net>
-      <appender name="UdpTextAppender" type="Propeller.Log.Appenders.UdpTextAppender, Propeller.Log">
+      <appender name="UdpTextAppender" type="Propeller.Logger.Appenders.UdpTextAppender, Propeller.Logger">
         <port value="8085" />
         <destination value="127.0.0.1" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%property{log4net:HostName} %date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+          <conversionPattern value="%4t %d{ABSOLUTE} %-5p %m%n" />
         </layout>
       </appender>
       <root>
         <appender-ref ref="UdpTextAppender" />
       </root>
     </log4net>
+    <pipelines>
+      <initialize>
+        <processor type="propeller.logger.LogPropInitializer, propeller.logger" />
+      </initialize>
+    </pipelines>
   </sitecore>
 </configuration>
