--- a/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
+++ b/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
@@ -8,15 +8,14 @@ input {
 filter {
   if [type] == "log4net" {
     grok {
-      match => { "message" => "(?m)%{NUMBER:threadid} %{TIME:sourceTimestamp} %{LOGLEVEL:loglevel} %{GREEDYDATA:tmpMessage}"}
+      match => { "message" => "(?m)%{NUMBER:threadid} %{TIME:sourceTimestamp} %{LOGLEVEL:loglevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
 
     }
-    # mutate {
-    #   update => ["message", "%{[@metadata][tmpMessage]}"]
-    # }
+    mutate {
+      update => ["message", "%{[@metadata][tmpMessage]}"]
+    }
   }
 }
-
 
 output {
   elasticsearch {
