Trimmed out references from nuget packages.

--- a/src/Test/ModelTest/App.config
+++ b/src/Test/ModelTest/App.config
@@ -1,4 +1,5 @@
-﻿<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
   <configSections>
     <section name="sitecore" type="Sitecore.FakeDb.Configuration.ConfigReader, Sitecore.FakeDb" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, Sitecore.Logging" />
@@ -41,4 +42,19 @@
     </profile>
   </system.web>
   
+  <runtime>
+  
+       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+  
+            </dependentAssembly>
+  
+       </assemblyBinding>
+  
+  </runtime>
 </configuration>
