--- a/src/Framework/PropellerMvcCore/packages.config
+++ b/src/Framework/PropellerMvcCore/packages.config
@@ -1,12 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net46" />
-  <package id="Lucene.Net" version="3.0.3" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
-  <package id="Sitecore.Kernel" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Logging" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Logging.Client" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.NVelocity" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Zip" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net45" />
+  <package id="Sitecore.Kernel.NoReferences" version="7.2.140228" targetFramework="net45" developmentDependency="true" />
 </packages>
