--- a/src/Framework/PropellerMvcPresentation/packages.config
+++ b/src/Framework/PropellerMvcPresentation/packages.config
@@ -1,17 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net46" />
-  <package id="Lucene.Net" version="3.0.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
-  <package id="Sitecore.Kernel" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Logging" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Logging.Client" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Mvc" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.NVelocity" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
-  <package id="Sitecore.Zip" version="8.1.160519" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net45" />
+  <package id="Sitecore.Kernel.NoReferences" version="7.2.140228" targetFramework="net45" developmentDependency="true" />
+  <package id="Sitecore.Mvc.NoReferences" version="7.2.140228" targetFramework="net45" developmentDependency="true" />
 </packages>
