upgrade reference til sitecore 8.1

--- a/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
+++ b/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
@@ -37,11 +37,11 @@
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.4.5.9\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.Kernel, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Sitecore.Kernel.NoReferences.7.2.140228\lib\NET45\Sitecore.Kernel.dll</HintPath>
+    <Reference Include="Sitecore.Kernel, Version=8.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Sitecore.Kernel.NoReferences.8.1.160519\lib\NET45\Sitecore.Kernel.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Mvc, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Sitecore.Mvc.NoReferences.7.2.140228\lib\NET45\Sitecore.Mvc.dll</HintPath>
+      <HintPath>..\..\..\packages\Sitecore.Mvc.NoReferences.8.0.141212\lib\NET45\Sitecore.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -76,6 +76,7 @@
     <Compile Include="IPropellerTemplate.cs" />
     <Compile Include="PropellerViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SCPageMode.cs" />
     <Compile Include="TemplateRender.cs" />
   </ItemGroup>
   <ItemGroup>
