--- a/src/Domain/Demo/Demo.csproj
+++ b/src/Domain/Demo/Demo.csproj
@@ -180,6 +180,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\empire_icon.jpg" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
